--- a/linkpreviewer/src/main/res/values/strings.xml
+++ b/linkpreviewer/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LinkPreviewer</string>
+    <string name="button_add">Add</string>
+    <string name="edittext_hint">enter url here…</string>
 </resources>
